chore: Update file reading logic and add support for Excel files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
 altgraph==0.17.4
+et-xmlfile==1.1.0
 mypy==1.11.1
 mypy-extensions==1.0.0
+numpy==2.1.0
+openpyxl==3.1.5
 packaging==24.1
+pandas==2.2.2
+pandas-stubs==2.2.2.240807
+platformdirs==4.2.2
 pyinstaller==6.10.0
 pyinstaller-hooks-contrib==2024.8
 PyQt6==6.7.1
 PyQt6-Qt6==6.7.2
 PyQt6_sip==13.8.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
 setuptools==72.2.0
+six==1.16.0
+types-pytz==2024.1.0.20240417
 typing_extensions==4.12.2
+tzdata==2024.1
