--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+dist/*.exe filter=lfs diff=lfs merge=lfs -text
+dist/copy-files-app filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
 copy-files-app filter=lfs diff=lfs merge=lfs -text
