--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ dist/*.exe filter=lfs diff=lfs merge=lfs -text
 dist/copy-files-app filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
 copy-files-app filter=lfs diff=lfs merge=lfs -text
+* text=auto eol=lf
