--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 altgraph==0.17.4
+defusedxml==0.7.1
 et-xmlfile==1.1.0
 mypy==1.11.1
 mypy-extensions==1.0.0
 numpy==2.1.0
+odfpy==1.4.1
 openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.2
